--- a/projects.html
+++ b/projects.html
@@ -5,20 +5,37 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Russell Leung: Projects</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="style.css" rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Arvo" />
 </head>
 
 <main class="projects">
-	<nav>
-		<a href="index.html">Home</a>
-		<a href="education.html">Education</a>
-		<a href="experience.html">Experience</a>
-		<a href="projects.html">Projects</a>
-		<div onclick="dropdownToggle()" class="dropbtn">
-			Contact Me
-      <a id="email" class="dropdown-content" href="mailto:ruleung05@student.haverhill-ps.org" target="_blank">Email</a>
-    </div>
-	</nav>
+  
+  <nav class="desktop">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="experience.html">Experience</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact-me.html">Contact Me</a></li>
+    </ul>
+  </nav>
+
+  <nav class="mobile">
+    <ul>
+      <li class="mobile-dropbtn">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        <div class="mobile_dropdown_content">
+          <a href="index.html">Home</a>
+          <a href="education.html">Education</a>
+          <a href="experience.html">Experience</a>
+          <a href="projects.html">Projects</a>
+          <a href="contact-me.html">Contact Me</a>
+        </div>
+      </li>
+    </ul>
+  </nav>
 
 	<body>
 
@@ -34,8 +51,9 @@
 
 					<a href="https://github.com/russell-leung/hangman" target="_blank">Source Code</a>
 				</div>
-        <a href="https://replit.com/@RussellLeung/Hangman#main.py" target="_blank" class="img">
-          <img src="img/hangman.png" alt="picture of hangman game">
+				<a href="https://replit.com/@RussellLeung/Hangman#main.py" target="_blank" class="img">
+					<!-- <img src="img/hangman.png" alt="picture of hangman game"> -->
+            <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@RussellLeung/Hangman?embed=true"></iframe>
         </a>
 			</div>
 
