--- a/index.html
+++ b/index.html
@@ -2,37 +2,53 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>Russell Leung</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Russell Leung</title>
+  <link href="style.css" rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Arvo" />
 </head>
 
 <main class="home">
 
-	<nav>
-		<a href="index.html">Home</a>
-		<a href="education.html">Education</a>
-		<a href="experience.html">Experience</a>
-		<a href="projects.html">Projects</a>
-		<div onclick="dropdownToggle()" class="dropbtn">
-			Contact Me
-      <a id="email" class="dropdown-content" href="mailto:ruleung05@student.haverhill-ps.org" target="_blank">Email</a>
-    </div>
-	</nav>
+  <nav class="desktop">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="experience.html">Experience</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact-me.html">Contact Me</a></li>
+    </ul>
+  </nav>
 
-	<body>
+  <nav class="mobile">
+    <ul>
+      <li class="mobile-dropbtn">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+        <div class="mobile_dropdown_content">
+          <a href="index.html">Home</a>
+          <a href="education.html">Education</a>
+          <a href="experience.html">Experience</a>
+          <a href="projects.html">Projects</a>
+          <a href="contact-me.html">Contact Me</a>
+        </div>
+      </li>
+    </ul>
+  </nav>
 
-		<h1 id="fname">Russell</h1>
-		<h1 id="lname">Leung</h1>
+  <body>
+    <h1 id="fname">Russell</h1>
+    <h1 id="lname">Leung</h1>
 
     <div id="about-me">
       High school junior with a passion for engineering and computer science.
     </div>
 
-		<script src="script.js"></script>
-	</body>
 
+    <script src="script.js"></script>
+  </body>
 </main>
+
 
 </html>
