--- a/education.html
+++ b/education.html
@@ -45,8 +45,8 @@
       <div id="GPA">
         <h2>Grade Point Average (GPA)</h2>
         <ul>
-          <li>Unweighted GPA: 3.9</li>
-          <li>Credits: 19</li>
+          <li>Unweighted GPA: 3.92</li>
+          <li>Credits: 21</li>
           <li>Class Rank: x Out Of 554</li>
 
           <!-- need to put link to picture of transcript into here when I get an updated transcript -->
@@ -61,6 +61,7 @@
           <li>Introduction to Programming</li>
           <li>10th Grade Programming and Web Development</li>
           <li>11th Grade Programming and Web Development</li>
+          <li>12th Grade Programming and Web Development</li>
         </ul>
       </div>
 
@@ -79,7 +80,8 @@
           <li>English Composition 1 & 2</li>
           <li>Pre-Calculus</li>
           <li>General Chemistry 1</li>
-          <li>Calculus 1</li>
+          <li>Calculus 1 & 2</li>
+          <li>Database Management</li>
         </ul>
       </div>
 
@@ -91,15 +93,15 @@
           <div class="ap-list" id="l1">
             <ul>
               <li>AP Environmental Science (4)</li>
-              <li>AP Physics</li>
-              <li>AP Computer Science A</li>
+              <li>AP Physics (5)</li>
+              <li>AP Computer Science A (5)</li>
             </ul>
           </div>
 
           <div class="ap-list" id="l2">
             <ul>
               <li>AP European History (5)</li>
-              <li>AP United States History</li>
+              <li>AP United States History (5)</li>
             </ul>
           </div>
 
