--- a/experience.html
+++ b/experience.html
@@ -44,9 +44,22 @@
     <div id="work-experience">
       <div id="HydraCor">
         <h2 id="title">
-          HydraCor, LLC Internship
+          Junior Developer Intern
         </h2>
         <ul id="list">
+          <li>Worked at HydraCor, LLC in Windham, NH</li>
+          <li>Developed applications using CakePHP and Vue.js</li>
+          <li>Implemented and created SQL databases</li>
+          <li>Utilized Docker Desktop containers and Visual Studio Code</li>
+        </ul>
+      </div>
+
+      <div id="HydraCor">
+        <h2 id="title">
+          Application Support Specialist Intern
+        </h2>
+        <ul id="list">
+          <li>Worked at HydraCor, LLC in Windham, NH</li>
           <li>Manually entered data correctly and accurately</li>
           <li>Reviewed collected data for accuracy and correctness</li>
           <li>Prepared and formated data for use</li>
@@ -56,7 +69,7 @@
 
       <div id="STEM">
         <h2 id="title">
-          STEM Career Awareness Internship
+          3D Printing Intern
         </h2>
         <ul id="list">
           <li>Taught middle and elementary scholars about additive manufacturing</li>
