--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h1 id="lname">Leung</h1>
 
     <div id="about-me">
-      High school junior with a passion for engineering and computer science.
+      High school senior with a passion for engineering and computer science.
     </div>
 
 
