updated information, removed iframe

--- a/education.html
+++ b/education.html
@@ -45,12 +45,12 @@
       <div id="GPA">
         <h2>Grade Point Average (GPA)</h2>
         <ul>
-          <li>Unweighted GPA: 3.92</li>
+          <li>Unweighted GPA: 3.91</li>
           <li>Credits: 21</li>
-          <li>Class Rank: x Out Of 554</li>
+          <li>Class Rank: 4 Out Of 409</li>
 
           <!-- need to put link to picture of transcript into here when I get an updated transcript -->
-          <li src="img/transcript.jpg">Transcript</li>
+          <!-- <li>Transcript</li> -->
         </ul>
       </div>
 
