--- a/projects.html
+++ b/projects.html
@@ -52,8 +52,8 @@
 					<a href="https://github.com/russell-leung/hangman" target="_blank">Source Code</a>
 				</div>
 				<a href="https://replit.com/@RussellLeung/Hangman#main.py" target="_blank" class="img">
-					<!-- <img src="img/hangman.png" alt="picture of hangman game"> -->
-            <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@RussellLeung/Hangman?embed=true"></iframe>
+					<img src="img/hangman.png" alt="picture of hangman game">
+          <!-- <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@RussellLeung/Hangman?embed=true"></iframe> -->
         </a>
 			</div>
 
